About Us added, Out of bound drag fixed
- About Us content added
- Out of bound drag fixed

--- a/Dashboard/public/css/styles.css
+++ b/Dashboard/public/css/styles.css
@@ -20,8 +20,8 @@ body {
 	font-family: 'Avenir Next LT Pro Regular', 'Open Sans', 'Helvetica Nueue' Helvetica, Arial, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizelegibility;
-	width: 100%;
 }
+
 
 .container {
 	width: 924px;
